--- a/converter-libre-office/pom.xml
+++ b/converter-libre-office/pom.xml
@@ -7,19 +7,19 @@
     <parent>
         <groupId>pl.beone.promena.sdk.maven.parent</groupId>
         <artifactId>promena-transformer-parent</artifactId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>1.0.0</version>
         <relativePath/>
     </parent>
 
     <groupId>pl.beone.promena.transformer</groupId>
     <artifactId>converter-libre-office</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <properties>
-        <converter-libre-office.version>0.9.0-SNAPSHOT</converter-libre-office.version>
+        <converter-libre-office.version>1.0.0</converter-libre-office.version>
 
-        <promena-communication-memory-model.version>0.9.0-SNAPSHOT</promena-communication-memory-model.version>
-        <promena-communication-file-model.version>0.9.0-SNAPSHOT</promena-communication-file-model.version>
+        <promena-communication-memory-model.version>1.0.0</promena-communication-memory-model.version>
+        <promena-communication-file-model.version>1.0.0</promena-communication-file-model.version>
 
         <jodconverter.version>4.2.2</jodconverter.version>
 
