[improved] The beginning of the introduction new structure

--- a/converter-libre-office-application-model/pom.xml
+++ b/converter-libre-office-application-model/pom.xml
@@ -11,7 +11,7 @@
         <relativePath/>
     </parent>
 
-    <groupId>pl.beone.promena.transformer</groupId>
+    <groupId>pl.beone.promena.base</groupId>
     <artifactId>converter-libre-office-application-model</artifactId>
     <version>1.0.0</version>
 
@@ -26,7 +26,7 @@
         </dependency>
 
         <dependency>
-            <groupId>pl.beone.promena.transformer</groupId>
+            <groupId>pl.beone.promena.base</groupId>
             <artifactId>promena-transformer-internal</artifactId>
         </dependency>
 
