--- a/converter-libre-office/pom.xml
+++ b/converter-libre-office/pom.xml
@@ -11,7 +11,7 @@
         <relativePath/>
     </parent>
 
-    <groupId>pl.beone.promena.transformer</groupId>
+    <groupId>pl.beone.promena.base</groupId>
     <artifactId>converter-libre-office</artifactId>
     <version>1.0.0</version>
 
@@ -37,7 +37,7 @@
         </dependency>
 
         <dependency>
-            <groupId>pl.beone.promena.transformer</groupId>
+            <groupId>pl.beone.promena.base</groupId>
             <artifactId>converter-libre-office-application-model</artifactId>
             <version>${converter-libre-office.version}</version>
         </dependency>
