[improved] Adapted to new archetype - parameters and settings

--- a/configuration/src/main/resources/transformer-converter-libreoffice.properties
+++ b/configuration/src/main/resources/transformer-converter-libreoffice.properties
@@ -2,3 +2,8 @@ transformer.pl.beone.promena.transformer.converter.libreoffice.LibreOfficeConver
 transformer.pl.beone.promena.transformer.converter.libreoffice.LibreOfficeConverterTransformer.id.sub-name=libre-office
 transformer.pl.beone.promena.transformer.converter.libreoffice.LibreOfficeConverterTransformer.priority=1
 transformer.pl.beone.promena.transformer.converter.libreoffice.LibreOfficeConverterTransformer.actors=1
+
+transformer.pl.beone.promena.transformer.converter.libreoffice.settings.home=/opt/libreoffice6.3
+transformer.pl.beone.promena.transformer.converter.libreoffice.settings.startingPort=5000
+
+transformer.pl.beone.promena.transformer.converter.libreoffice.default.parameters.timeout=
