--- a/configuration/src/main/resources/transformer-converter-libreoffice.properties
+++ b/configuration/src/main/resources/transformer-converter-libreoffice.properties
@@ -1,5 +1,5 @@
 transformer.pl.beone.promena.transformer.converter.libreoffice.LibreOfficeConverterTransformer.id.name=converter
-transformer.pl.beone.promena.transformer.converter.libreoffice.LibreOfficeConverterTransformer.id.sub-name=libre-office
+transformer.pl.beone.promena.transformer.converter.libreoffice.LibreOfficeConverterTransformer.id.sub-name=LibreOffice
 transformer.pl.beone.promena.transformer.converter.libreoffice.LibreOfficeConverterTransformer.priority=1
 transformer.pl.beone.promena.transformer.converter.libreoffice.LibreOfficeConverterTransformer.actors=1
 
