[improved] Changed execution implementation to new one based on "execute" util function. It is also executed in a separate thread [added] Timeout test

--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -34,6 +34,11 @@
         </dependency>
 
         <dependency>
+            <groupId>pl.beone.promena.base</groupId>
+            <artifactId>promena-transformer-util</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>pl.beone.promena.transformer</groupId>
             <artifactId>converter-libreoffice-application-model</artifactId>
             <version>${converter-libreoffice.version}</version>
