--- a/implementation/src/docker/Dockerfile
+++ b/implementation/src/docker/Dockerfile
@@ -1,4 +1,11 @@
-FROM azul/zulu-openjdk-centos:11.0.4
+FROM azul/zulu-openjdk-centos:11.0.5
+
+RUN echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen && \
+    localedef --quiet -c -i en_US -f UTF-8 en_US.UTF-8
+
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US
+ENV LC_ALL en_US.UTF-8
 
 ENV MAVEN_VERSION 3.6.1
 
