--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -45,6 +45,10 @@
         </dependency>
 
         <dependency>
+            <groupId>io.github.microutils</groupId>
+            <artifactId>kotlin-logging</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jodconverter</groupId>
             <artifactId>jodconverter-local</artifactId>
             <version>${jodconverter.version}</version>
