[improved] Updated LibreOffice to version 6.4.0.2

--- a/implementation/src/main/resources/docker/Dockerfile-fragment
+++ b/implementation/src/main/resources/docker/Dockerfile-fragment
@@ -1,9 +1,8 @@
 RUN yum -y install wget libSM cairo cups-libs && \
-    wget http://mirror.onet.pl/pub/mirrors/tdf/libreoffice/stable/6.3.1/rpm/x86_64/LibreOffice_6.3.1_Linux_x86-64_rpm.tar.gz && \
-    tar -xvf LibreOffice_6.3.1_Linux_x86-64_rpm.tar.gz && \
-    yum localinstall -y LibreOffice_6.3.1.2_Linux_x86-64_rpm/RPMS/*.rpm && \
-    rm -Rf LibreOffice_6.3.1.2_Linux_x86-64_rpm && \
-    rm -f LibreOffice_6.3.1_Linux_x86-64_rpm.tar.gz
+    wget http://downloadarchive.documentfoundation.org/libreoffice/old/6.4.0.2/rpm/x86_64/LibreOffice_6.4.0.2_Linux_x86-64_rpm.tar.gz && \
+    tar -xvf LibreOffice_6.4.0.2_Linux_x86-64_rpm.tar.gz && \
+    yum localinstall -y LibreOffice_6.4.0.2_Linux_x86-64_rpm/RPMS/*.rpm && \
+    rm -Rf LibreOffice_6.4.0.2_Linux_x86-64_rpm && \
+    rm -f LibreOffice_6.4.0.2_Linux_x86-64_rpm.tar.gz
 
-ENV OFFICE_HOME /opt/libreoffice6.3
 ENV OFFICE_STARTING_PORT 50000
